--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="menu">
                 <a href="./index.html" ><button id="home">Home</button></a>
                 <a href="./index.html" ><button id="projects">Projects</button></a>
+                <a href="./index.html" ><button id="works">works</button></a>
                 <a href="./index.html" ><button id="about">About</button></a>
                 <a href="./index.html" ><button id="conntact">contact</button></a>
             </div>
@@ -25,10 +26,11 @@
         <div class="right-containes">
             <div class="header">
                 <div class="sreach-bar">
-                    <input id="sreach-bar" type="search"  placeholder="screach" required style="outline: none; outline-style: none;">
+                    <input id="sreach-bar" type="search"  placeholder="search" required style="outline: none; outline-style: none;">
                 </div>
             </div>
             <div class="body-img">
+                <h2>Home</h2>
                 <div class="images">
                     <ul>
                         <li><img id="img1" src="./m4.png" alt=""></li>
@@ -40,16 +42,54 @@
                 </div>
             </div>
             <div class="body-content">
-                <h1>Projects</h1>
+                <h2>Motivational content</h2>
+                <p><span>Lorem</span> ipsum, dolor sit amet consectetur adipisicing elit. Nihil cupiditate eos voluptatum asperiores porro dicta maxime eveniet facilis suscipit repudiandae ut consequuntur esse assumenda amet voluptates doloremque, eligendi minus inventore rem blanditiis? Laudantium eligendi nihil incidunt, similique eveniet saepe sint quia, totam consectetur voluptatem, debitis recusandae doloremque? Odit, iste eaque?</p>
+                <h2>Projects</h2>
                 <p><span>Select</span> the projects to start work...</p>
-                <ul>
-                    <li><img src="./l1.png" alt=""></li>
-                    <li><img src="./l1.png" alt=""></li>
-                    <li><img src="./l1.png" alt=""></li>
-                    <li><img src="./l1.png" alt=""></li>
-                    <li><img src="./l1.png" alt=""></li>
-                    <li><img src="./l1.png" alt=""></li>
-                </ul>
+                <div class="projects">
+                    <div class="reading">
+                        <img src="./programming.png" alt="">
+                        <div class="content-reading">
+                            <h1>reading</h1>
+                            <a href="reading.html">click here...</a>
+                        </div>
+                    </div>
+                    <div class="reading">
+                        <img src="./programming.png" alt="">
+                        <div class="content-reading">
+                            <h1>reading</h1>
+                            <a href="reading.html">click here...</a>
+                        </div>
+                    </div>
+                    <div class="reading">
+                        <img src="./programming.png" alt="">
+                        <div class="content-reading">
+                            <h1>reading</h1>
+                            <a href="reading.html">click here...</a>
+                        </div>
+                    </div>
+                    <div class="reading">
+                        <img src="./programming.png" alt="">
+                        <div class="content-reading">
+                            <h1>reading</h1>
+                            <a href="reading.html">click here...</a>
+                        </div>
+                    </div>
+                    <div class="reading">
+                        <img src="./programming.png" alt="">
+                        <div class="content-reading">
+                            <h1>reading</h1>
+                            <a href="reading.html">click here...</a>
+                        </div>
+                    </div>
+                    <div class="reading">
+                        <img src="./programming.png" alt="">
+                        <div class="content-reading">
+                            <h2>reading</h2>
+                            <a href="reading.html">click here...</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
