--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h1>logo</h1>
             <div class="menu">
                 <a href="./index.html" ><button id="home">Home</button></a>
-                <a href="./index.html" ><button id="projects">Projects</button></a>
-                <a href="./index.html" ><button id="works">works</button></a>
-                <a href="./index.html" ><button id="about">About</button></a>
-                <a href="./index.html" ><button id="conntact">contact</button></a>
+                <a href="./projects.html" ><button id="projects">Projects</button></a>
+                <a href="./works.html" ><button id="works">works</button></a>
+                <a href="./about.html" ><button id="about">About us</button></a>
+                <a href="./contact.html" ><button id="conntact">contact</button></a>
             </div>
             <div class="bottom-menu">
                 <a href="./index.html" ><button id="settings">settings</button></a>
@@ -26,69 +26,44 @@
         <div class="right-containes">
             <div class="header">
                 <div class="sreach-bar">
+                    <div id="menu">
+                        <img  src="./menu.png" alt="">
+                    </div>
                     <input id="sreach-bar" type="search"  placeholder="search" required style="outline: none; outline-style: none;">
+                    <img id="bell" src="./bell.png" alt="">
                 </div>
+                <div class="proflie">
+                    <h3>profile</h3>
+                    <img src="./Avatar.png" alt="">
+                </div>
+                
             </div>
             <div class="body-img">
-                <h2>Home</h2>
+                <h2 >Home</h2>
                 <div class="images">
                     <ul>
-                        <li><img id="img1" src="./m4.png" alt=""></li>
-                        <li><img id="img2" src="./m4.png" alt=""></li>
-                        <li><img id="img3" src="./m4.png" alt=""></li>
-                        <li><img id="img4" src="./m4.png" alt=""></li>
-                        <li><img id="img5" src="./m4.png" alt=""></li>
+                        <li><img id="img1" src="./q3.jpg" alt=""></li>
+                        <li><img id="img2" src="./q7.jpg" alt=""></li>
+                        <li><img id="img3" src="./q5.jpg" alt=""></li>
+                        <li><img id="img4" src="./q4.jpg" alt=""></li>
+                        <li><img id="img5" src="./q6.jpg" alt=""></li>
                     </ul>
-                </div>
+                </div>  
             </div>
             <div class="body-content">
                 <h2>Motivational content</h2>
-                <p><span>Lorem</span> ipsum, dolor sit amet consectetur adipisicing elit. Nihil cupiditate eos voluptatum asperiores porro dicta maxime eveniet facilis suscipit repudiandae ut consequuntur esse assumenda amet voluptates doloremque, eligendi minus inventore rem blanditiis? Laudantium eligendi nihil incidunt, similique eveniet saepe sint quia, totam consectetur voluptatem, debitis recusandae doloremque? Odit, iste eaque?</p>
-                <h2>Projects</h2>
-                <p><span>Select</span> the projects to start work...</p>
-                <div class="projects">
-                    <div class="reading">
-                        <img src="./programming.png" alt="">
-                        <div class="content-reading">
-                            <h1>reading</h1>
-                            <a href="reading.html">click here...</a>
-                        </div>
-                    </div>
-                    <div class="reading">
-                        <img src="./programming.png" alt="">
-                        <div class="content-reading">
-                            <h1>reading</h1>
-                            <a href="reading.html">click here...</a>
-                        </div>
-                    </div>
-                    <div class="reading">
-                        <img src="./programming.png" alt="">
-                        <div class="content-reading">
-                            <h1>reading</h1>
-                            <a href="reading.html">click here...</a>
-                        </div>
-                    </div>
-                    <div class="reading">
-                        <img src="./programming.png" alt="">
-                        <div class="content-reading">
-                            <h1>reading</h1>
-                            <a href="reading.html">click here...</a>
-                        </div>
-                    </div>
-                    <div class="reading">
-                        <img src="./programming.png" alt="">
-                        <div class="content-reading">
-                            <h1>reading</h1>
-                            <a href="reading.html">click here...</a>
-                        </div>
-                    </div>
-                    <div class="reading">
-                        <img src="./programming.png" alt="">
-                        <div class="content-reading">
-                            <h2>reading</h2>
-                            <a href="reading.html">click here...</a>
-                        </div>
-                    </div>
+                <p><span>Lorem</span>ipsum, dolor sit amet consectetur adipisicing elit. Nihil cupiditate eos voluptatum asperiores porro dicta maxime eveniet facilis suscipit repudiandae ut consequuntur esse assumenda amet voluptates doloremque, eligendi minus inventore rem blanditiis? Laudantium eligendi nihil incidunt, similique eveniet saepe sint quia, totam consectetur voluptatem, debitis recusandae doloremque? Odit, iste eaque?</p>
+            </div>
+            <div class="footer">
+                <div class="col1">
+                    <p>SCHEDULING DRONES © 2021 ALL Rights Reserved</p>
+                </div>
+                <div class="col2">
+                    <ul>
+                        <li><img src="./icons8-facebook-64.png" alt=""></li>
+                        <li><img src="./icons8-instagram-64.png" alt=""></li>
+                        <li><img src="./icons8-twitter-circled-64.png" alt=""></li>
+                    </ul>
                 </div>
             </div>
         </div>
