--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./commen.css">
 </head>
 <body>
     <div class="container">
         <div class="left-container">
             <h1>logo</h1>
+            <img id="avatar" src="./Avatar.png" alt="">
+            <p id="username">Avator</p>
             <div class="menu">
                 <a href="./index.html" ><button id="home">Home</button></a>
                 <a href="./projects.html" ><button id="projects">Projects</button></a>
@@ -18,29 +21,33 @@
                 <a href="./about.html" ><button id="about">About us</button></a>
                 <a href="./contact.html" ><button id="conntact">contact</button></a>
             </div>
-            <div class="bottom-menu">
-                <a href="./index.html" ><button id="settings">settings</button></a>
-                <a href="./index.html" ><button id="log-out">log out</button></a>
-            </div>
         </div>
         <div class="right-containes">
             <div class="header">
                 <div class="sreach-bar">
-                    <div id="menu">
-                        <img  src="./menu.png" alt="menu">
+                    <div >
+                        <img id="menu-icon" src="./menu.png" alt="menu" 
+                        onclick="togglemenu()" >
                     </div>
                     <input id="sreach-bar" type="search"  placeholder="search" required style="outline: none; outline-style: none;">
-                    <img id="bell" src="./bell.png" alt="">
+                    <a id="log-out" href="./log-out.html"><button>log out</button></a>
                 </div>
-                <div class="proflie">
-                    <h3>profile</h3>
-                    <img src="./Avatar.png" alt="">
-                </div>
-                
             </div>
-            <div class="body-img">
+            <div id="menuList">
+                <h2>logo</h2>
+                <img id="avatar" src="./Avatar.png" alt="">
+                <p id="username">Avator</p>
+                <div class="menu">
+                    <a href="./index.html" ><button id="home">Home</button></a>
+                    <a href="./projects.html" ><button id="projects">Projects</button></a>
+                    <a href="./works.html" ><button id="works">works</button></a>
+                    <a href="./about.html" ><button id="about">About us</button></a>
+                    <a href="./contact.html" ><button id="conntact">contact</button></a>
+                </div>
+            </div>
+            <div class="body-img" onclick="retogglemenu(menuList)">
                 <h2 >Home</h2>
-                <div class="images">
+                <div class="images" >
                     <ul>
                         <li><img id="img1" src="./q3.jpg" alt=""></li>
                         <li><img id="img2" src="./q7.jpg" alt=""></li>
@@ -68,5 +75,22 @@
             </div>
         </div>
     </div>
+    <script>
+        var menuList = document.getElementById("menuList");
+        menuList.style.maxWidth ="0vw";
+        function togglemenu(){
+            if (menuList.style.maxWidth =="0vw"){
+                menuList.style.maxWidth ="50vw"
+            }
+            else{
+                menuList.style.maxWidth ="0vw"
+            }
+        }
+        function retogglemenu(){
+            if (menuList.style.maxWidth ="50vw"){
+                menuList.style.maxWidth ="0vw"
+            }
+        }
+    </script>
 </body>
 </html>
