Content ready for bedtime , wake up and reading

--- a/projects.html
+++ b/projects.html
@@ -76,9 +76,9 @@
                     <div class="reading">
                         <img src="./morning.jpg" alt="">
                         <div class="content-reading">
-                            <h1>Moring wake up</h1>
+                            <h1>Wake up</h1>
                             <a href="./works.html"><img src="./add-folder.png" alt=""></a>
-                            <a href="./reading.html" id="startwork">click here</a>
+                            <a href="./morning.html" id="startwork">click here</a>
                         </div>
                     </div>
                     <div class="reading">
@@ -90,11 +90,11 @@
                         </div>
                     </div>
                     <div class="reading">
-                        <img src="./programming.png" alt="">
+                        <img src="./tibe.png" alt="">
                         <div class="content-reading">
-                            <h1>reading</h1>
+                            <h1>Bedtime Routine</h1>
                             <a href="./works.html"><img src="./add-folder.png" alt=""></a>
-                            <a href="reading.html" id="startwork">click here</a>
+                            <a href="sleep.html" id="startwork">click here</a>
                         </div>
                     </div>
                 </div>
