--- a/reading.html
+++ b/reading.html
@@ -49,7 +49,7 @@
                 <div>
                     <h2 class="read">Develop Reading Skills</h2>
                     <p><span>The</span> power of reading is considerable, especially for those who read every day. Reading helps broaden the imagination, engage your creativity, and light reading can take you to places that cannot be reached in any other way. A movie or television show tells you a story, reading is creating the story in your mind.<br> For those who want to keep a young, healthy and engage mind, regular reading is essential. If you are not a reader by nature, here are a few tips that will help you develop your reading skills.  </p>
-                    <img id="read" src="./reading2.png" alt="read">
+                    <img id="read" src="./readimg2.png" alt="read">
                 </div>
                 <div id="tabs">
                     <h3>Start with subjects that interest you</h3>
