--- a/morning.html
+++ b/morning.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scheduling Drones Morning Person </title>
-    <link rel="stylesheet" href="./sample2.css">
+    <link rel="stylesheet" href="./morning.css">
 </head>
 <body>
     <div class="container">
@@ -35,40 +35,26 @@
                 <img id="sunm" src="./sun.png" alt="wake up">
                 <p class="txtwake">We have heard of the famous quote that "The early bird gets the worm". Many studies have indeed proved this correct; it has been found that morning people tend to be active, which ultimately leads to their success.<br> But if you're a night owl and want to become a morning person, you may have already tried many things and relapsed into waking up late. And maybe that is why you're here.<br> According to scientists, our genes determine our 'chronotype',which describes if we are a morning person or a night person. We can influence our chronotypes to a certain degree; all it takes consistency, determination, and two weeks. So, let's begin!<br> Decide your morning schedule and adjust your sleep. We usually focus on setting our sleeping times so that we wake up early the next day. But we don't need to worry about that as it just causes stress. Our bodies are designed to adjust and settle down the same with time. You'll be tired by waking up early and would gradually start sleeping on time.<br> However, you must stick to you becoming a morning person routine-wake up, exercise, and get on with your work. And dont't take this as a "schedule" that you have to follow, because then, you would start finding a way of "taking a break".</p>
                 <div id="tabs">
-                    <h3 class="ndque">
-                        <a href="#tab1" class="nav-tab tab1" style="text-decoration: none;">Use a smart alarm</a>
-                    
-                    </h3>
+                    <h3 class="ndque">Use a smart alarm</h3>
                     <img id="sm" src="./ms.png">
                     <p id="tab1" class="tab1">Another step to becoming a morning person is using the snooze button very less. The snooze button was developed so that people could get a 5-10-minute window before waking up. But it can hinder you from waking up early and fresh.<br>You can try the alternatives of snooze, like Smart Alarm or Math Alarm. These Smartphone apps ask you to solve a puzzle or a math problem before snoozing your alarm, which tricks your brain to wake up and function. You can also try setting different songs for your alarm tone, which act as novel stimuli and help the brain to wake up.</p>
-                    <h3 class="ndque">
-                        <a href="#tab2" class="nav-tab tab2" style="text-decoration: none;">Let in the light</a>
+                    <h3 class="ndque">Let in the light
                     </h3>
                     <img id="sunshine" src="./sunshines.png">
                     <p id="tab2" class="tab2">This works for people who wish to wake up when the sun hasn’t risen like at 5 am. You can turn on your room lights, which will send signals o the body to terminate melatonin secretion, which helps in sleeping. Ultimately, making your brain think that the sun has risen already, and it’s time to wake up.<br>You might think it is not the most feasible way as your electricity bill would rise. But this is a short-term solution to wake you up early. If you follow this for a few days and become a morning person, you might not need to do it anymore!</p>
-                    <h3 class="ndque">
-                        <a href="#tab3" class="nav-tab tab3" style="text-decoration: none;">Get some exercise</a>
-                    </h3>
+                    <h3 class="ndque">Get some exercise</h3>
                     <img id="exwake"src="./exwake.png"> 
                     <p id="tab3" class="tab3">Exercising has so many benefits, and when done during the morning hours, it also helps in staying active reducing stress, and lowering the blood pressure. Becoming a morning person leads to sleeping on time.</p>
-                    <h3 class="ndque">
-                        <a href="#tab4" class="nav-tab tab4"style="text-decoration: none;" >Have a protien-heavy meal</a>
-                    </h3>
+                    <h3 class="ndque">Have a protien-heavy meal</h3>
                     <img id="protien" src="./protien meal.png">
                     <p id="tab4" class="tab4">Proteins have known benefits for the body, one being increasing dopamine levels. Switch your meal to more protein-rich food like yogurt or eggs and you’ll be ready for the day.</p>
-                    <h3 class="ndque">
-                        <a href="#tab5" class="nav-tab tab5"style="text-decoration: none;" >Avoid the urge to nap</a>
-                    </h3>
+                    <h3 class="ndque">Avoid the urge to nap</h3>
                     <img id="nap" src="./nap.png">
                     <p id="tab5" class="nav-tab tab5">“Balancing” your sleep by napping in the day is not a good step. You’re indirectly binding yourself to sleep during the day while fixing your night sleep.</p>
-                    <h3 class="ndque">
-                        <a href="#tab6" class="nav-tab tab6"style="text-decoration: none;" >Avoid gadgets in the bedroom</a>
-                    </h3>
+                    <h3 class="ndque">Avoid gadgets in the bedroom</h3>
                     <img id="mobile" src="./mobile.png">
                     <p id="tab6" class="nav-tab tab6">It is almost impossible to avoid any screens in the bedroom; we usually have our phones or laptops with us. But we can work on minimizing their usage near and around our place and time of sleep. Try making your bed or bedroom as a place or complete relaxation and stress- free environment.</p>
-                    <h3 class="ndque">
-                        <a href="#tab7" class="nav-tab tab7"style="text-decoration: none;" >Get organized and set up your calendar</a>
-                    </h3>
+                    <h3 class="ndque">Get organized and set up your calendar</h3>
                     <img id="calender" src="./calender.img">
                     <p id="tab7" class="nav-tab tab7">Keeping your mind and work organized is the key to good sleep. If anything is bugging up try solving it or writing it down to free your mind while you sleep.<br>Plan something for every day, something that you look up to, to make yourself excited to hop out of bed and become a morning person.<br>As you will dive into your new routine, you’ll find yourself more active and ready for the day. This might take some time, but you will become a morning person and get your worm!</p>
                   
