--- a/morning.html
+++ b/morning.html
@@ -57,23 +57,23 @@
                     <p id="tab1" class="tab1">Another step to becoming a morning person is using the snooze button very less. The snooze button was developed so that people could get a 5-10-minute window before waking up. But it can hinder you from waking up early and fresh.<br>You can try the alternatives of snooze, like Smart Alarm or Math Alarm. These Smartphone apps ask you to solve a puzzle or a math problem before snoozing your alarm, which tricks your brain to wake up and function. You can also try setting different songs for your alarm tone, which act as novel stimuli and help the brain to wake up.</p>
                     <h3 class="ndque">Let in the light
                     </h3>
-                    <img id="sunshine" src="./sunshines.png">
-                    <p id="tab2" class="tab2">This works for people who wish to wake up when the sun hasn’t risen like at 5 am. You can turn on your room lights, which will send signals o the body to terminate melatonin secretion, which helps in sleeping. Ultimately, making your brain think that the sun has risen already, and it’s time to wake up.<br>You might think it is not the most feasible way as your electricity bill would rise. But this is a short-term solution to wake you up early. If you follow this for a few days and become a morning person, you might not need to do it anymore!</p>
+                    <img id="sm" src="./sunshines.png">
+                    <p id="tab1" class="tab2">This works for people who wish to wake up when the sun hasn’t risen like at 5 am. You can turn on your room lights, which will send signals o the body to terminate melatonin secretion, which helps in sleeping. Ultimately, making your brain think that the sun has risen already, and it’s time to wake up.<br>You might think it is not the most feasible way as your electricity bill would rise. But this is a short-term solution to wake you up early. If you follow this for a few days and become a morning person, you might not need to do it anymore!</p>
                     <h3 class="ndque">Get some exercise</h3>
-                    <img id="exwake"src="./exwake.png"> 
-                    <p id="tab3" class="tab3">Exercising has so many benefits, and when done during the morning hours, it also helps in staying active reducing stress, and lowering the blood pressure. Becoming a morning person leads to sleeping on time.</p>
+                    <img id="sm"src="./exwake.png"> 
+                    <p id="tab1" class="tab3">Exercising has so many benefits, and when done during the morning hours, it also helps in staying active reducing stress, and lowering the blood pressure. Becoming a morning person leads to sleeping on time.</p>
                     <h3 class="ndque">Have a protien-heavy meal</h3>
-                    <img id="protien" src="./protien meal.png">
-                    <p id="tab4" class="tab4">Proteins have known benefits for the body, one being increasing dopamine levels. Switch your meal to more protein-rich food like yogurt or eggs and you’ll be ready for the day.</p>
+                    <img id="sm" src="./protien meal.png">
+                    <p id="tab1" class="tab4">Proteins have known benefits for the body, one being increasing dopamine levels. Switch your meal to more protein-rich food like yogurt or eggs and you’ll be ready for the day.</p>
                     <h3 class="ndque">Avoid the urge to nap</h3>
-                    <img id="nap" src="./nap.png">
-                    <p id="tab5" class="nav-tab tab5">“Balancing” your sleep by napping in the day is not a good step. You’re indirectly binding yourself to sleep during the day while fixing your night sleep.</p>
+                    <img id="sm" src="./nap.png">
+                    <p id="tab1" class="nav-tab tab5">“Balancing” your sleep by napping in the day is not a good step. You’re indirectly binding yourself to sleep during the day while fixing your night sleep.</p>
                     <h3 class="ndque">Avoid gadgets in the bedroom</h3>
-                    <img id="mobile" src="./mobile.png">
-                    <p id="tab6" class="nav-tab tab6">It is almost impossible to avoid any screens in the bedroom; we usually have our phones or laptops with us. But we can work on minimizing their usage near and around our place and time of sleep. Try making your bed or bedroom as a place or complete relaxation and stress- free environment.</p>
+                    <img id="sm" src="./mobile.png">
+                    <p id="tab1" class="nav-tab tab6">It is almost impossible to avoid any screens in the bedroom; we usually have our phones or laptops with us. But we can work on minimizing their usage near and around our place and time of sleep. Try making your bed or bedroom as a place or complete relaxation and stress- free environment.</p>
                     <h3 class="ndque">Get organized and set up your calendar</h3>
-                    <img id="calender" src="./calender.img">
-                    <p id="tab7" class="nav-tab tab7">Keeping your mind and work organized is the key to good sleep. If anything is bugging up try solving it or writing it down to free your mind while you sleep.<br>Plan something for every day, something that you look up to, to make yourself excited to hop out of bed and become a morning person.<br>As you will dive into your new routine, you’ll find yourself more active and ready for the day. This might take some time, but you will become a morning person and get your worm!</p>
+                    <img id="sm" src="./calender.img">
+                    <p id="tab1" class="nav-tab tab7">Keeping your mind and work organized is the key to good sleep. If anything is bugging up try solving it or writing it down to free your mind while you sleep.<br>Plan something for every day, something that you look up to, to make yourself excited to hop out of bed and become a morning person.<br>As you will dive into your new routine, you’ll find yourself more active and ready for the day. This might take some time, but you will become a morning person and get your worm!</p>
 </div>
 <div class="footer">
     <div class="col1">
