--- a/projects.html
+++ b/projects.html
@@ -84,9 +84,9 @@
                     <div class="reading">
                         <img src="./programming.png" alt="">
                         <div class="content-reading">
-                            <h1>reading</h1>
+                            <h1>Drink Water</h1>
                             <a href="./works.html"><img src="./add-folder.png" alt=""></a>
-                            <a href="./reading.html" id="startwork">click here</a>
+                            <a href="./water.html" id="startwork">click here</a>
                         </div>
                     </div>
                     <div class="reading">
