--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
                         <img src="./programming.png" alt="">
                         <div class="content-reading">
                             <h1>Drink Water</h1>
-                            <a href="./works.html"><img src="./add-folder.png" alt=""></a>
+                            <a href="./works.html"><img src="./w.png" alt=""></a>
                             <a href="./water.html" id="startwork">click here</a>
                         </div>
                     </div>
