--- a/projects.html
+++ b/projects.html
@@ -82,10 +82,10 @@
                         </div>
                     </div>
                     <div class="reading">
-                        <img src="./programming.png" alt="">
+                        <img src="./w.png" alt="">
                         <div class="content-reading">
                             <h1>Drink Water</h1>
-                            <a href="./works.html"><img src="./w.png" alt=""></a>
+                            <a href="./works.html"><img src="./add-folder.png" alt=""></a>
                             <a href="./water.html" id="startwork">click here</a>
                         </div>
                     </div>
