--- a/projects.html
+++ b/projects.html
@@ -50,19 +50,19 @@
                 <p><span>Select</span> the projects to start work...</p>
                 <div class="projects">
                     <div class="reading">
+                        <img src="./morning.jpg" alt="">
+                        <div class="content-reading">
+                            <h1>Wake up</h1>
+                            <a href="./works.html"><img src="./add-folder.png" alt=""></a>
+                            <a href="./morning.html" id="startwork">click here</a>
+                        </div>
+                        </div>
+                    <div class="reading">
                         <img src="./reading.jpg" alt="">
                         <div class="content-reading">
-                            <h1>Reading</h1>
+                            <h1>Develop Reading</h1>
                             <a href="./works.html"><img src="./add-folder.png" alt=""></a>
                             <a href="reading.html" id="startwork">click here</a>
-                        </div>
-                    </div>
-                    <div class="reading">
-                        <img src="./exercise.jpg" alt="">
-                        <div class="content-reading">
-                            <h1>Exercise</h1>
-                            <a href="./works.html"><img src="./add-folder.png" alt=""></a>
-                            <a href="exersice.html" id="startwork">click here</a>
                         </div>
                     </div>
                     <div class="reading">
@@ -74,12 +74,13 @@
                         </div>
                     </div>
                     <div class="reading">
-                        <img src="./morning.jpg" alt="">
+                        <img src="./exercise.jpg" alt="">
                         <div class="content-reading">
-                            <h1>Wake up</h1>
+                            <h1>Exercise</h1>
                             <a href="./works.html"><img src="./add-folder.png" alt=""></a>
-                            <a href="./morning.html" id="startwork">click here</a>
+                            <a href="exersicing.html" id="startwork">click here</a>
                         </div>
+                   
                     </div>
                     <div class="reading">
                         <img src="./w.png" alt="">
