--- a/sleep.html
+++ b/sleep.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="./commen.css">
     <link rel="stylesheet" href="./sleep.css">
 </head>
 <body>
@@ -47,38 +48,37 @@
             <div class="body" onclick="retogglemenu(menuList)">
                 <p></p>
                 <div class="topic3">
-                    <h1 class="read">Build a bedtime routine</h1>
-                    <h2 class="que">How to Build a Good Bedtime Routine That Makes Your Morning Easier
-                    </h2>
-                    <img id="bedtime" src="./bedsleep.png" alt="bedtime">
-                    <p class="txtread"><b>“Today is tomorrow’s yesterday,”</b>
+                    <h2>Build a bedtime routine</h2>
+                    <h3>How to Build a Good Bedtime Routine That Makes Your Morning Easier</h3>
+                    <img src="./bedsleep.png" alt="bedtime">
+                    <p><span><b>“Today</span> is tomorrow’s yesterday,”</b>
                         the quote says and it rings true from North to South, from West to East. And if we want to have a productive and energetic today, we need to prepare it yesterday. If we learn from yesterday, we can live today and we’ll even have time to plan for tomorrow.<br> The best way to jumpstart your day isn’t the first thing you do in the morning – but the last thing you do the night before. And here is a list of 20 tips that you can use for your bedtime routine to start the next morning energetic and productive:</p>
                     <div id="tabs">
-                        <h3 class="ndque">1. Create your bedtime routine</h3>
-                        <p id="tab1" class="tab1">The first thing to start with is by actually creating a bedtime routine. By this, I don’t mean just being a victim of consequences like kids, late dinners or office tasks that need to be done.<br>By creating a bedtime routine, you consciously create a set of behaviours that you will do (or not do) before you fall asleep that night.<br>In the beginning, it only needs to be a single thing that you adhere to like no laptop in the bed or TV for only 30 minutes or hitting at sack at 11:30 pm max.And you can use the following tips to optimize your bedtime routine.</p>
-                        <h3 class="ndque">2. Play music</h3>
-                        <img id="music" src="./music.png">
-                        <p id="tab1" class="tab2">Music has a variety of effects on our bodies. First of all, our bodies are 70% water and vibrations affect us physiologically.<br>By playing certain (soothing) music, you will feel relaxed and prepared for sleep. Now, it’s all about finding the perfect music for you. You need to find your own rhythm, so try out a lot of different songs and categories and see what fits you the best.</p>
-                        <h3 class="ndque">3. Read a book</h3>
-                        <img id="music"src="./readbed.png"> 
-                        <p id="tab1" class="tab3">This one is a bit tricky – you should be reading a book before you sleep but not something which is hard to understand and needs a lot of straining from your conscious mind.It’s best to read something lighter before bedtime because it will put your mind in a nice rhythm and will induce you into a qualitative sleep.<br>Pick something that interests you and is quite easy to read like “How To Win Friends & Influence People”.</p>
-                        <h3 class="ndque">4. Drink water</h3>
-                        <img id="music" src="./waterbed.png">
-                        <p id="tab1" class="tab4">Quality of sleep depends a lot on the hydration of our bodies. If you feel the thirst, it means you are already dehydrated.The sacred rule I adhere to for a quality bedtime routine is one glass of water before bed and one glass of water as soon as I wake up.</p>
-                        <h3 class="ndque">5. Evaluate your today</h3>
-                        <p id="tab1" class="nav-tab tab5">You planned out the 3 most important tasks that you need to do today. Now, it’s time to evaluate those tasks.This is the time for self-reflection, and Self-Reflection Gives You a Happier and More Successful Life.So sit down and evaluate if you managed to accomplish the 3 tasks that you set up the night before.</p>
-                        <h3 class="ndque">6. Do mindfulness exercise like meditation</h3>
-                        <img id="music" src="./meditate.png">
-                        <p id="tab1" class="nav-tab tab6">Mindfulness doesn’t have to be meditation, but meditation is almost always mindfulness. Mindfulness trains your mind to become present and aware of the things and people that surround you. This makes you forget about the worries of the future and the regrets of the past and makes you live in the present. Mindfulness as a bedtime routine helps you clear out your mind and makes you fall asleep easily, without those pesky regrets and worries sneaking up on you when you finally hit the sack.</p>
-                        <h3 class="ndque">7. Plan out your 3 most important tasks for tomorrow</h3>
-                        <img id="music" src="./diarybed.png">
-                        <p id="tab1" class="nav-tab tab7">When you plan out your 3 most important tasks for tomorrow, you immediately eliminate unnecessary decisions from tomorrow’s day. When you remove decision making from the day, all that’s left is to just do that activity. This is backed by research about ego depletion, where making decisions throughout the day depletes our willpower, making us less likely to do the activities. But if you prepare them in advance (decide and write down that you’ll do it), you will be more likely to do them. So plan out your 3 most important tasks for tomorrow and sleep like a baby, knowing what you will do tomorrow.</p>
-                        <h3 class="ndque">8. Don’t eat heavy food</h3>
-                        <p id="tab1" class="nav-tab tab8">Eating that late night dinner at 10:30 pm and then going back home trying to fall asleep is like getting drunk and trying to walk the line – you think you can do it until you actually try it. A big dinner and heavy food before bedtime keep your stomach working 24/7 and prevents it from having any rest during the night. This affects the quality of sleep and makes you feel sleepy before you fall asleep and extends to when you wake up. Remove heavy food from your night meals and look at how your energy spikes in the morning – I did it six months ago and I am never going back to it.</p>
-                        <h3 class="ndque">9. Go to bed at the same time</h3>
-                        <p id="tab1" class="nav-tab tab9">Training your body and mind to shut down at the same time is beneficiary because it learns when you don’t need energy and when you do. This makes your energy usage more effective because you are 100% active when you need it and 0% active when you don’t need it. Most people work on a 50-60% active energy, always being active but never being on their top game. If you train your body and mind to shut down after, let’s say, 11:00 pm, then it will reward you with energy spikes in the morning and afternoon. And the easiest way to accomplish this is by going to bed at the same time.</p>
-                        <h3 class="ndque">10. Spend time with loved ones</h3>
-                        <p id="tab1" class="nav-tab tab10">The biggest factor that contributes to a happy and fulfilled life is relationships – with friends, family and loved ones. At the end of a long, arduous day, you should spend time with your loved ones- the people with whom you can share your happiness but also your sad moments.</p>
+                        <h3>1. Create your bedtime routine</h3>
+                        <p>The first thing to start with is by actually creating a bedtime routine. By this, I don’t mean just being a victim of consequences like kids, late dinners or office tasks that need to be done.<br>By creating a bedtime routine, you consciously create a set of behaviours that you will do (or not do) before you fall asleep that night.<br>In the beginning, it only needs to be a single thing that you adhere to like no laptop in the bed or TV for only 30 minutes or hitting at sack at 11:30 pm max.And you can use the following tips to optimize your bedtime routine.</p>
+                        <h3>2. Play music</h3>
+                        <img src="./music.png">
+                        <p><span>Music</span> has a variety of effects on our bodies. First of all, our bodies are 70% water and vibrations affect us physiologically.<br>By playing certain (soothing) music, you will feel relaxed and prepared for sleep. Now, it’s all about finding the perfect music for you. You need to find your own rhythm, so try out a lot of different songs and categories and see what fits you the best.</p>
+                        <h3>3. Read a book</h3>
+                        <img src="./readbed.png"> 
+                        <p><span>This</span> one is a bit tricky – you should be reading a book before you sleep but not something which is hard to understand and needs a lot of straining from your conscious mind.It’s best to read something lighter before bedtime because it will put your mind in a nice rhythm and will induce you into a qualitative sleep.<br>Pick something that interests you and is quite easy to read like “How To Win Friends & Influence People”.</p>
+                        <h3>4. Drink water</h3>
+                        <img src="./waterbed.png">
+                        <p><span>Quality</span> of sleep depends a lot on the hydration of our bodies. If you feel the thirst, it means you are already dehydrated.The sacred rule I adhere to for a quality bedtime routine is one glass of water before bed and one glass of water as soon as I wake up.</p>
+                        <h3>5. Evaluate your today</h3>
+                        <p><span>You</span> planned out the 3 most important tasks that you need to do today. Now, it’s time to evaluate those tasks.This is the time for self-reflection, and Self-Reflection Gives You a Happier and More Successful Life.So sit down and evaluate if you managed to accomplish the 3 tasks that you set up the night before.</p>
+                        <h3>6. Do mindfulness exercise like meditation</h3>
+                        <img src="./meditate.png">
+                        <p><span>Mindfulness</span> doesn’t have to be meditation, but meditation is almost always mindfulness. Mindfulness trains your mind to become present and aware of the things and people that surround you. This makes you forget about the worries of the future and the regrets of the past and makes you live in the present. Mindfulness as a bedtime routine helps you clear out your mind and makes you fall asleep easily, without those pesky regrets and worries sneaking up on you when you finally hit the sack.</p>
+                        <h3>7. Plan out your 3 most important tasks for tomorrow</h3>
+                        <img src="./diarybed.png">
+                        <p><span>When</span> you plan out your 3 most important tasks for tomorrow, you immediately eliminate unnecessary decisions from tomorrow’s day. When you remove decision making from the day, all that’s left is to just do that activity. This is backed by research about ego depletion, where making decisions throughout the day depletes our willpower, making us less likely to do the activities. But if you prepare them in advance (decide and write down that you’ll do it), you will be more likely to do them. So plan out your 3 most important tasks for tomorrow and sleep like a baby, knowing what you will do tomorrow.</p>
+                        <h3>8. Don’t eat heavy food</h3>
+                        <p><span>Eating</span> that late night dinner at 10:30 pm and then going back home trying to fall asleep is like getting drunk and trying to walk the line – you think you can do it until you actually try it. A big dinner and heavy food before bedtime keep your stomach working 24/7 and prevents it from having any rest during the night. This affects the quality of sleep and makes you feel sleepy before you fall asleep and extends to when you wake up. Remove heavy food from your night meals and look at how your energy spikes in the morning – I did it six months ago and I am never going back to it.</p>
+                        <h3>9. Go to bed at the same time</h3>
+                        <p><span>Training</span> your body and mind to shut down at the same time is beneficiary because it learns when you don’t need energy and when you do. This makes your energy usage more effective because you are 100% active when you need it and 0% active when you don’t need it. Most people work on a 50-60% active energy, always being active but never being on their top game. If you train your body and mind to shut down after, let’s say, 11:00 pm, then it will reward you with energy spikes in the morning and afternoon. And the easiest way to accomplish this is by going to bed at the same time.</p>
+                        <h3>10. Spend time with loved ones</h3>
+                        <p><span>The</span> biggest factor that contributes to a happy and fulfilled life is relationships – with friends, family and loved ones. At the end of a long, arduous day, you should spend time with your loved ones- the people with whom you can share your happiness but also your sad moments.</p>
 
             </div>
             
