--- a/water.html
+++ b/water.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="./commen.css">
-    <link rel="stylesheet" href="./sleep.css">
+    <link rel="stylesheet" href="./reading.css">
 </head>
 <body>
     <div class="container" >
@@ -99,7 +99,7 @@
         function togglemenu(){
             if (menuList.style.maxHeight =="0vh"){
                 menuList.style.maxHeight ="60vh"
-                menuList.style.maxWidth ="120px"
+                menuList.style.maxWidth ="180px"
             }
             else{
                 menuList.style.maxHeight ="0vh"
