--- a/reading.html
+++ b/reading.html
@@ -97,7 +97,7 @@
             }
         }
         function retogglemenu(){
-            if (menuList.style.maxHeight ="6vh"){
+            if (menuList.style.maxHeight == "60vh"){
                 menuList.style.maxHeight ="0vh"
                 menuList.style.maxWidth ="0vw"
             }
